<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    android:columnCount="4"
    android:rowCount="6">

    <Button
        android:onClick="clearPressed"
        android:layout_rowWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnC"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="negatePressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negate"
        android:id="@+id/btnNegate"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="operationPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/btnDivide"
        android:layout_row="0"
        android:layout_column="2" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="operationPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/btnMultiply"
        android:layout_row="0"
        android:layout_column="3" />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/btn7"
        android:layout_row="1"
        android:layout_column="0"
    />
    <Button
        android:layout_rowWeight="1"
        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/btn8"
        android:layout_row="1"
        android:layout_column="1"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/btn9"
        android:layout_row="1"
        android:layout_column="2"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="operationPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/btnMinus"
        android:layout_row="1"
        android:layout_column="3"
       />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/btn4"
        android:layout_row="2"
        android:layout_column="0"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/btn5"
        android:layout_row="2"
        android:layout_column="1"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/btn6"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="operationPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:layout_row="2"
        android:layout_column="3"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/btn1"
        android:layout_row="3"
        android:layout_column="0"
        />
    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/btn2"
        android:layout_row="3"
        android:layout_column="1"
        />

    <Button
        android:layout_rowWeight="1"

        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/btn3"
        android:layout_row="3"
        android:layout_column="2" />

    <Button
        android:onClick="enterPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/btnE"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_rowSpan="2"
        android:layout_rowWeight="2"
        android:layout_gravity="bottom|fill_vertical" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="digitPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/btn0"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal|right" />

    <Button
        android:layout_rowWeight="1"
        android:onClick="periodPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:id="@+id/btn."
        android:layout_row="4"
        android:layout_column="2" />

</GridLayout>